[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "onnxruntime-ep-webgpu"
version = "0.0.0"  # Replaced at build time by build_wheel.py
description = "ONNX Runtime WebGPU Plugin Execution Provider"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"

[tool.setuptools.packages.find]
include = ["onnxruntime_ep_webgpu*"]

[tool.setuptools.package-data]
onnxruntime_ep_webgpu = ["*.dll", "*.so", "*.so.*", "*.dylib"]
