[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "onnxruntime-ep-webgpu"
version = "VERSION_PLACEHOLDER"  # Replaced at build time by build_wheel.py
description = "ONNX Runtime WebGPU Plugin Execution Provider"
readme = "onnxruntime_ep_webgpu/README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
  "onnxruntime>=1.24.4",
]

[tool.setuptools.packages.find]
include = ["onnxruntime_ep_webgpu*"]

[tool.setuptools.package-data]
onnxruntime_ep_webgpu = ["*.dll", "*.so", "*.so.*", "*.dylib"]
