[package]
authors = ["Nicolas Bigaouette <nbigaouette@gmail.com>"]
edition = "2018"
name = "onnxruntime"
version = "0.0.14"

description = "Wrapper around Microsoft's ONNX Runtime"
documentation = "https://docs.rs/onnxruntime"
homepage = "https://github.com/nbigaouette/onnxruntime-rs"
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/nbigaouette/onnxruntime-rs"

categories = ["science"]
keywords = ["neuralnetworks", "onnx", "bindings"]

[[test]]
name = "integration_tests"
required-features = ["model-fetching"]

[dependencies]
lazy_static = "1.4"
ndarray = "0.15"
onnxruntime-sys = { version = "0.0.14", path = "../onnxruntime-sys" }
thiserror = "1.0"
tracing = "0.1"

# Enabled with 'model-fetching' feature
ureq = { version = "2.1", optional = true }

[dev-dependencies]
image = "0.23"
test-log = { version = "0.2", default-features = false, features = ["trace"] }
tracing-subscriber = "0.2"
ureq = "2.1"

[features]
# Fetch model from ONNX Model Zoo (https://github.com/onnx/models)
model-fetching = ["ureq"]

[package.metadata.docs.rs]
features = ["model-fetching"]
